--- a/test.css
+++ b/test.css
@@ -32,7 +32,7 @@
     justify-content:space-between;
 }
 
-.role1234 li{
+.role1234 ul{
     width: 100px;
     display: flex;
     flex-wrap: wrap;
