--- a/test.css
+++ b/test.css
@@ -37,7 +37,7 @@
     display: flex;
     flex-wrap: wrap;
     background-color: yellow;
-    justify-content: space-between;
+   /* justify-content: space-between;*/
     
 
 }
