--- a/test.css
+++ b/test.css
@@ -46,18 +46,58 @@
 }
 
 
-.footer-banner{
-
+.footer-banner {
+    /*max-width: 100%;*/
+    padding-top: 290px;
+    height: 503px;  
     background-image: url('chatTalker_images/footer_sm.svg');
     background-repeat: no-repeats;
-    height: 503px;/*PC height*/
+    /*height: 503px;PC height*/
     background-size: cover;
+    background-position: center;
     position: relative;
+    
+    
+    
+    
 }
-
+.footer-banner .container p{
+top: 3391px;
+left: 471px;
+width: 424px;
+height: 46px;
+text-align: center;
+font: normal normal bold 32px/46px Noto Sans TC;
+letter-spacing: 0px;
+color: #221E1F;
+opacity: 1;
+padding-top: 260px;
+padding-left: 351px;
+padding-right: 471px;
+}
+.planlogoGreen{
+    margin: 20px 0;
+	width: 150px;
+	height: 30px;
+    background: #56C4C5;
+	font-size: 16px;
+	font-weight: 900;
+    border-radius: 45px;
+    padding-top:10px;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 480px;
+    
+}
+.planlogoGreen a{
+    text-decoration: none;
+    color: white;
+    
+}
 @media(max-width:767px) {
      
     .footer-banner{
+        padding-top: 260px;
         height: 461px;
     }
 }
