--- a/test.css
+++ b/test.css
@@ -1,5 +1,5 @@
 .container{
-    max-width: 1088px;
+    max-width: 1388px;
     margin: 0 auto;
     border: 1px solid red;
     padding: 15px 50px;
@@ -17,20 +17,61 @@
     border-radius: 45px;
     padding-top:10px;
     text-align: center;
+    
 }
 
 .planlogo a{
     text-decoration: none;
     color: white;
-    
-    
+
     
 }
 
 .toplogo{
     display:flex;
     justify-content:space-between;
+     
 }
+/* chat robot圖文在這一層 */
+.top-background{
+    background-repeat:no-repeat;
+    background-image: url('chatTalker_images/bg_home.svg');
+    background-position: top right;
+}
+.chatrobot-combine{
+    max-width: 100%;
+    height:524px;
+    display: flex;
+    background-image: url('chatTalker_images/home.svg');
+    justify-content: space-between;
+    background-repeat:no-repeat;
+    background-position: right;
+}
+.chatrobot-combine h2{
+ padding-top:158px;
+ padding-bottom: 8px;
+ font-weight: bold;
+    color: #56C4C5;
+
+}
+.chatrobot-combine p{
+    padding-left: -10px;
+    width: 432px;
+    font-size: 48px;
+    padding-top: 8px;
+    line-height: 60px;
+    padding-bottom: 8px;
+    font-weight: bold;
+    
+   }
+
+.chatrobot-combine h3{
+    padding-top:20px;
+    color: #221E1F;
+    font-weight: bold;
+}
+    
+/* 任何腳色我都能給，下面 */
 .role4 ul li img{
     width: 100%;
     
@@ -38,21 +79,63 @@
 .role4 ul{
     /*width: 100px;*/
     display: flex;
-     flex-wrap: wrap;
     background-color: yellow;
-   /* justify-content: space-between;*/
-    
+   /* justify-content: space-around; */
+   gap:16px;
+      
 
 }
+.role4 img{
+    border-top-left-radius: 5%;
+    border-top-right-radius: 5%;
+}
+.role-item{
+    width: 25%;
+    height: 25%;
+    text-align: center;
+    
+    
+}
+.role-title{
+ font-size: 32px;
+ font-family: Noto Sans TC;
+ font-weight:800;
+ text-align: center;
+}
 
+.role-p{
+    font-size: 20px;
+    font-family: Noto Sans TC;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight:580;
+}
+.role-item h2{
+    color:#56C4C5;
+    padding-top: 10px;
+    padding-left:16px;
+    padding-right:16px;
+
+}
+.role-item p{
+    color:#221E1F;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left:16px;
+    padding-right:16px;
+}
 
 .footer-banner {
-    /*max-width: 100%;*/
-    padding-top: 290px;
+    max-width: 100%;
+    
     height: 503px;  
-    background-image: url('chatTalker_images/footer_sm.svg');
-    background-repeat: no-repeats;
-    /*height: 503px;PC height*/
+    background-image: url('chatTalker_images/home_footer.svg');
+    /* background-repeat: repeat-x;
+    /*repeat-x 跟 contain也能滿版意思是重複x軸這張圖，另外這個height: 503px;PC height*/
+    /* background-size: contain; */ 
+    /*老師使用了no repeat 採用cover整張照片*/
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -71,13 +154,13 @@ font: normal normal bold 32px/46px Noto Sans TC;
 letter-spacing: 0px;
 color: #221E1F;
 opacity: 1;
-padding-top: 260px;
+padding-top: 300px;
 padding-left: 351px;
 padding-right: 471px;
 }
 .planlogoGreen{
     margin: 20px 0;
-	width: 150px;
+	width: 136px;
 	height: 30px;
     background: #56C4C5;
 	font-size: 16px;
@@ -97,6 +180,7 @@ padding-right: 471px;
 @media(max-width:767px) {
      
     .footer-banner{
+        background-image: url('chatTalker_images/footer_sm.svg');/*換成小版的圖片*/
         padding-top: 260px;
         height: 461px;
     }
