--- a/test.css
+++ b/test.css
@@ -326,79 +326,7 @@ data-pool{
     background-image:url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/icon04.svg');
    
   }
-  .data-des{
-    padding-top:165px;
-    width:395px;
-    padding-left:25px;
-  }
-  .data-des h2{
-    font-size:32px;
-    font-weight:bold;
-    padding-right:50px;
-    
-    margin-bottom:20px;
-  }
-  .data-des p{
-    font-size:18px;
-    color: #221E1F;
-   padding-right:50px;
-   
-   line-height:23px;
- }
-.footer-banner {
-    max-width: 100%;
-    
-    height: 503px;  
-    background-image: url('chatTalker_images/home_footer.svg');
-    /* background-repeat: repeat-x;
-    /*repeat-x 跟 contain也能滿版意思是重複x軸這張圖，另外這個height: 503px;PC height*/
-    /* background-size: contain; */ 
-    /*老師使用了no repeat 採用cover整張照片*/
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-  
-    
-}
-.footer-banner .container p{
-top: 3391px;
-left: 471px;
-width: 424px;
-height: 46px;
-text-align: center;
-font: normal normal bold 32px/46px Noto Sans TC;
-letter-spacing: 0px;
-color: #221E1F;
-opacity: 1;
-padding-top: 300px;
-padding-left: 500px;
-padding-right: 471px;
-}
-.f-p-btn h2{
-    
-    margin: 20px 0;
-	
-	height: 30px;
-    /* background: #747474; */
-    color: white;
-	font-size: 16px;
-	font-weight: 900;   
-    
-    padding-top:10px;
-    text-align: center;
-    
-}
-.f-p-btn a{
-   
-    padding: 20px 40px;/*上下  左右*/
-    text-decoration: none;
-    background: #56C4C5;
-    border-radius: 45px;
-    color: white;
-    text-align: center;
-}
-.data-des .planlogoGreen{
+  .data-des .planlogoGreen{
     
     margin: 20px 0;
 	
@@ -424,6 +352,135 @@ padding-right: 471px;
     text-align: left;
     
 }
+  .data-des{
+    padding-top:165px;
+    width:395px;
+    padding-left:25px;
+  }
+  .data-des h2{
+    font-size:32px;
+    font-weight:bold;
+    padding-right:50px;
+    
+    margin-bottom:20px;
+  }
+  .data-des p{
+    font-size:18px;
+    color: #221E1F;
+   padding-right:50px;
+   
+   line-height:23px;
+ }
+ 
+.comment-title{
+    text-align: center;
+    font-weight: bold;
+    font-size: 32px;
+    
+}
+ .comment-item ul{
+     display: flex;
+     gap:16px;
+     /* background-color: antiquewhite; */
+     justify-content: space-around;
+     
+ }
+ .comment-sub{
+    
+    border-radius: 10px;
+     width: 352px;
+     height: 304px;
+     margin-bottom: 100px;
+     
+ }
+
+ .comment-sub-wrap{
+     
+     width: 352px;
+     height: 248px;
+    box-shadow: 0px 2px 10px rgb(147,125,70);
+   
+ }
+.cmt-photo-fm1-1{
+    z-index: 9;
+    top:0px;
+    width: 80px;
+    height: 80px;
+    border-radius: 45%;
+    background-size: cover;
+    background-image: url('chatTalker_images/user01.jpg');
+    
+ }
+ .cmt-photo-fm2-1{
+    width: 80px;
+    height: 80px;
+    border-radius: 45%;
+    background-size: cover;
+    background-image: url('chatTalker_images/user02.jpg');
+ }
+
+ .cmt-photo-fm3-1{
+    width: 80px;
+    height: 80px;
+    border-radius: 45%;
+    background-size: cover;
+    background-image: url('chatTalker_images/user03.jpg');
+ }
+.footer-banner {
+    max-width: 100%;
+    
+    height: 503px;  
+    background-image: url('chatTalker_images/home_footer.svg');
+    /* background-repeat: repeat-x;
+    /*repeat-x 跟 contain也能滿版意思是重複x軸這張圖，另外這個height: 503px;PC height*/
+    /* background-size: contain; */ 
+    /*老師使用了no repeat 採用cover整張照片*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+  
+    
+}
+.footer-banner .container p{
+top: 3391px;
+left: 471px;
+/* background-color: antiquewhite; */
+    /* width: 424px; */
+/* height: 46px; */
+text-align: center;
+font: normal normal bold 32px/46px Noto Sans TC;
+letter-spacing: 0px;
+color: #221E1F;
+opacity: 1;
+padding-top: 300px;
+padding-left: 500px;
+padding-right: 461px;
+}
+.f-p-btn h2{
+    
+    margin: 20px 0;
+	
+	height: 30px;
+    /* background: #747474; */
+    color: white;
+	font-size: 16px;
+	font-weight: 900;   
+    
+    padding-top:10px;
+    text-align: center;
+    
+}
+.f-p-btn a{
+   
+    padding: 20px 40px;/*上下  左右*/
+    text-decoration: none;
+    background: #56C4C5;
+    border-radius: 45px;
+    color: white;
+    text-align: center;
+}
+
 @media(max-width:767px) {
      
     .footer-banner{
@@ -432,6 +489,8 @@ padding-right: 471px;
         height: 461px;
     }
 }
+
+
 .footer{
     background: #F5F5F5;
     text-align: center;
