--- a/test.css
+++ b/test.css
@@ -372,21 +372,23 @@ data-pool{
    line-height:23px;
  }
  
-.comment-title{
+ .comment-title{
     text-align: center;
     font-weight: bold;
     font-size: 32px;
-    
+    padding-bottom:100px;
 }
  .comment-item ul{
      display: flex;
      gap:16px;
      /* background-color: antiquewhite; */
      justify-content: space-around;
+   
      
  }
  .comment-sub{
-    
+    background-color:pink;
+   
     border-radius: 10px;
      width: 352px;
      height: 304px;
@@ -395,36 +397,87 @@ data-pool{
  }
 
  .comment-sub-wrap{
-     
-     width: 352px;
+   padding-left:10px;
+   padding-right:10px;
+    background-color:lightgreen;
+/*      width: 352px; */
      height: 248px;
     box-shadow: 0px 2px 10px rgb(147,125,70);
    
  }
+.comment-sub-wrap p{
+  padding-top:48px;
+   font-size:16px;
+  font-weight:regular;
+  color:#221E1F;
+  line-height:22px;
+}
+.comment-sub-wrap h3{
+  font-weight:bold;
+  font-size:16px;
+  padding-top:24px;
+}
+.comment-border{
+/*   margin-left:10px;
+  margin-right:10px; */
+border: 1px solid #DDDDDD;
+
+}
+.comment-sub-wrap h4{
+  padding-top:8px;
+  font-weight:regular;
+  color:#221E1F;
+  font-size:16px;
+ 
+}
 .cmt-photo-fm1-1{
+    left:139px;
+    top:2420px;
     z-index: 9;
-    top:0px;
+    position:absolute;
+   
     width: 80px;
     height: 80px;
     border-radius: 45%;
     background-size: cover;
-    background-image: url('chatTalker_images/user01.jpg');
+    background-image: url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/user01.jpg');
     
  }
+.cmt-photo-fm1-2{
+  background-color:blue;
+  position:relative;
+  bottom:20px;
+  left:85px;
+  width:106px;
+  height:20px;
+  background-size:contain;
+ background-image: 
+url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/icon_star.svg');
+}
+
  .cmt-photo-fm2-1{
+    
+    z-index: 9;
+    position:absolute;
+    left: 605px;;
+    top: 2420px;
     width: 80px;
     height: 80px;
     border-radius: 45%;
     background-size: cover;
-    background-image: url('chatTalker_images/user02.jpg');
+    background-image: url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/user02.jpg');
  }
 
  .cmt-photo-fm3-1{
+   z-index: 9;
+    position:absolute;
+    left: 1075px;;
+    top: 2420px;
     width: 80px;
     height: 80px;
     border-radius: 45%;
     background-size: cover;
-    background-image: url('chatTalker_images/user03.jpg');
+    background-image: url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/user03.jpg');
  }
 .footer-banner {
     max-width: 100%;
