--- a/test.css
+++ b/test.css
@@ -1,11 +1,11 @@
 .container{
-    max-width: 100%;
-    /* max-width: 1388px; */
+    /* max-width: 100%; */
+    max-width: 1388px;
     margin: 0 auto;
     border: 1px solid red;
     padding: 15px;
-    margin-left:140px;
-    margin-right:140px;
+    /* margin-left:140px;
+    margin-right:140px; */
 
     /* padding: 15px 50px;
      */
@@ -42,7 +42,7 @@
 .top-background{
     z-index: -2;
     width: 850px;
-    height: 100%;
+    height: 120%;
     position: absolute;
     top: 0;
     right: 0;
@@ -55,7 +55,7 @@
     height: 768px; */
     /* background-size:cover; */
       /* right: 0px; */
-    /* background-repeat:no-repeat; */
+    background-repeat:no-repeat;
     background-image: url('chatTalker_images/bg_home.svg') ;
     /* background-position: top right; */
    
@@ -543,7 +543,7 @@ url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_
     
 }
 .footer-banner  p{
-    top: 5000px;
+    /* top: 5000px; */
 /* top: 3391px; */
 /* left: 471px; */
 /* background-color: antiquewhite; */
@@ -554,7 +554,7 @@ text-align: center;
 font: normal normal bold 32px/46px Noto Sans TC;
 letter-spacing: 0px;
 color: #221E1F;
-opacity: 1;
+padding-top: 320px;
 /* padding-top: 300px;
 padding-left: 500px;
 padding-right: 461px; */
@@ -656,20 +656,35 @@ padding-right: 461px; */
         /* text-align: center; */
         padding-left: 20%;
     }
-    .footer-banner{
-        left: 25%;
+    /* .footer-banner{
+        
         top: 500px;
-        background-image: url('chatTalker_images/footer_sm.svg');/*換成小版的圖片*/
-        /* padding-top: 260px; */
+        background-image: url('chatTalker_images/footer_sm.svg');
+       
         width: 375px;
         height: 461px;
+    } */
+    .data-card{
+        display:flex;
+        flex-direction: column-reverse;
+        
+       
     }
- 
+    .data-card ul{
+        display: block;
+        height: auto;
+        /* width: 507px;
+        height: 588px; */
+        /* display: flex;
+        flex-wrap: wrap; */
+        /* gap:30px; */
+       
+      
+    }
 
 
-
-.footer{
-    background: #F5F5F5;
-    text-align: center;
-}
+    .footer{
+        background: #F5F5F5;
+        text-align: center;
+    }
 }
