--- a/test.css
+++ b/test.css
@@ -381,6 +381,7 @@ data-pool{
    
    line-height:23px;
  }
+
  .comment-main2{
      display: none;
  }
@@ -390,7 +391,8 @@ data-pool{
     font-size: 32px;
     padding-bottom:100px;
 }
- .comment-item ul{
+ .comment-item ul{/*還是有X軸*/
+    /* margin: auto; */
      /* max-width: 1088px; /*這還沒調整最佳，先拿掉 */
      position: relative;
      display: flex;
@@ -401,6 +403,7 @@ data-pool{
      
  }
  .comment-sub{
+     /* position: relative; */
     background-color:pink;
    
     border-radius: 10px;
@@ -408,17 +411,17 @@ data-pool{
      height: 304px;
      margin-bottom: 10px;
      
+     
  }
-
- .comment-sub-wrap{
+/*.comment-sub-wrap  多包這一層 還是有出現X軸拖拉的時候*/
+  .comment-sub-wrap{
+    /* position: relative; */
    padding-left:32px;
    padding-right:32px;
     background-color:lightgreen;
-/*      width: 352px; */
      height: 248px;
-    box-shadow: 0px 2px 10px rgb(147,125,70);
-   
- }
+    box-shadow: 0px 2px 10px rgb(147,125,70); 
+    } 
 .comment-sub-wrap p{
   padding-top:48px;
    font-size:16px;
@@ -445,9 +448,11 @@ border: 1px solid #DDDDDD;
  
 }
 .cmt-photo-fm1-1{
-    left:380px;
-    top:2400px;
-    z-index: 9;
+    /* left:380px; */
+    /* top:2400px; */
+    left:80px;
+    top:-60px;
+    /* z-index: 9; */
     position:absolute;
    
     width: 80px;
@@ -470,9 +475,9 @@ border: 1px solid #DDDDDD;
 url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/icon_star.svg');
 }
 
- .cmt-photo-fm2-1{
+ .cmt-photo-fm2-1{      
     
-    z-index: 9;
+    /* z-index: 9; */
     position:absolute;
     left:580px;
     top:-60px;
@@ -496,7 +501,7 @@ url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_
   }
 
  .cmt-photo-fm3-1{
-   z-index: 9;
+   /* z-index: 9; */
     position:absolute;
     /* left:1380px;
     top:2400px; */
