--- a/test.css
+++ b/test.css
@@ -264,7 +264,7 @@ data-pool{
     /* background-color:yellow; test*/
 }
 .data-card ul{
-    width: 507px;
+    /* width: 507px; */
     /* height: 588px; */
     display: flex;
     flex-wrap: wrap;
@@ -364,12 +364,13 @@ data-pool{
     
 }
   .data-des{
+    position: relative;
     padding-top:165px;
-    width:395px;
-    padding-left:25px;
+    /* width:395px; */
+    /* padding-left:25px; */
   }
   .data-des h2{
-      position: relative;
+    position: relative;
     font-size:32px;
     font-weight:bold;
     padding-right:50px;
@@ -621,7 +622,11 @@ padding-right: 461px; */
     color: white;
     text-align: center;
 }
-
+.footer .paragraph{
+    /* position: relative; */
+    background: #F5F5F5;
+    text-align: center;
+}
 
 @media(max-width:768px){
    .toplogo-detail{
@@ -678,6 +683,7 @@ padding-right: 461px; */
  }
     
     .social-three ul{
+        position: relative;
         display: flex;
         flex-direction: column;
         padding-left: 35%;
@@ -688,21 +694,23 @@ padding-right: 461px; */
         
     }
     .role4 ul{
+        position: relative; 
         display: flex;
         flex-direction: column;
         padding-left: 15%;
     }
    
     .role-item{
+        position: relative;
         width: 260px;
         background-size: cover;
         /* text-align: center; */
         padding-left: 20%;
     }
 
-    .data-item{
+    /* .data-item{
         margin-bottom: 20px;
-    }
+    } */
     /* .footer-banner{
         
         top: 500px;
@@ -712,43 +720,44 @@ padding-right: 461px; */
         height: 461px;
     } */
     .data-card{
+        position: relative;
         display:flex;
         flex-direction: column-reverse;
         padding-left: 25%;
        
     }
     .data-card ul{
-        display: block;
-        height: auto;
-        /* width: 507px;
-        height: 588px; */
-        /* display: flex;
-        flex-wrap: wrap; */
-        /* gap:30px; */
-        padding-left: 10%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        gap:16px;
       
     }
     .data-des> .planlogoGreen{
         padding-left: 20%;
     }
-    .comment-main{
-        display: none;
-    }
-    .comment-main2{
-        display: block;
+    .comment-main ul{
+        position: relative;
+        display: flex;
+        flex-direction: column;
         
     }
+    /* .comment-main2{
+        display: flex;
+        flex-direction: column;
+        
+    } */
   .comment-sub-wrap{
      position: relative; 
   }
   
-    .cmt-photo-fm1-1{
+    /* .cmt-photo-fm1-1{
         z-index: 1  ;
+        position: relative;
         position:absolute;
-        /* left:240px; */
-        top:5050px;
+        top:-40px;
         
-        }
+        } */
      
       /*.cmt-photo-fm2-1{
          display: none;
@@ -764,7 +773,8 @@ padding-right: 461px; */
      } */
      
 
-    .footer{
+    .footer .paragraph{
+        /* position: relative; */
         background: #F5F5F5;
         text-align: center;
     }
