--- a/test.css
+++ b/test.css
@@ -386,9 +386,9 @@ data-pool{
    line-height:23px;
  }
 
- .comment-main2{
+ /* .comment-main2{
      display: none;
- }
+ } */
  .comment-title{
     text-align: center;
     font-weight: bold;
@@ -396,7 +396,7 @@ data-pool{
     padding-bottom:100px;
 }
  .comment-item ul{/*還是有X軸*/
-    /* margin: auto; */
+    margin: auto;
      /* max-width: 1088px; /*這還沒調整最佳，先拿掉 */
      position: relative;
      display: flex;
@@ -407,7 +407,7 @@ data-pool{
      
  }
  .comment-sub{
-     /* position: relative; */
+     position: relative;
     background-color:pink;
    
     border-radius: 10px;
@@ -427,6 +427,7 @@ data-pool{
     box-shadow: 0px 2px 10px rgb(147,125,70); 
     } 
 .comment-sub-wrap p{
+    position: relative;
   padding-top:48px;
    font-size:16px;
   font-weight:regular;
@@ -434,6 +435,7 @@ data-pool{
   line-height:22px;
 }
 .comment-sub-wrap h3{
+    position: relative;
   font-weight:bold;
   font-size:16px;
   padding-top:24px;
@@ -445,6 +447,7 @@ border: 1px solid #DDDDDD;
 
 }
 .comment-sub-wrap h4{
+    position: relative;
   padding-top:8px;
   font-weight:regular;
   color:#221E1F;
