--- a/test.css
+++ b/test.css
@@ -423,7 +423,7 @@ data-pool{
    padding-left:32px;
    padding-right:32px;
     background-color:lightgreen;
-     height: 248px;
+    height: 248px;
     box-shadow: 0px 2px 10px rgb(147,125,70); 
     } 
 .comment-sub-wrap p{
@@ -474,7 +474,7 @@ border: 1px solid #DDDDDD;
   position:relative;
   bottom:20px;
   /* left:180px; */
-  margin-left: 180px;
+  /* margin-left: 180px; */ /*會有X軸 所以用relative代替*/
   width:104.8px;
   height:20px;
   background-size:contain;
@@ -499,7 +499,7 @@ url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_
     position:relative;
     bottom:20px;
     /* left:180px; */
-    margin-left: 180px;
+    /* margin-left: 180px; */
     width:104.8px;
     height:20px;
     background-size:contain;
@@ -520,31 +520,22 @@ url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_
     background-size: cover;
     background-image: url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/user03.jpg');
  }
- /*測試background img 換成img .cmt-photo1*/
- /* .cmt-photo1{
-      z-index: 9;
-    position:absolute;
-    /* left:1380px;
-    top:2400px; */
-    /* left:1020px;
-    top:-50px; */
-    /* left:20px;
-    top:20px;
-    width: 80px;
-    height: 80px;
-    border-radius: 45%; */
-     /* */ */
- /* } */
+ 
  .cmt-photo-fm3-2{
     /* background-color:blue; */
     position:relative;
     bottom:20px;
-    margin-left: 180px;
+    /* margin-left: 180px; */
     width:104.8px;
     height:20px;
     background-size:contain;
     background-image: 
   url('https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/icon_star.svg');
+  }
+  .wrapStar-h4{
+      position: relative;
+      display: flex;
+      justify-content: space-around;
   }
   .dot-wrap{
     display: flex;
