--- a/mission2RoleRecord.css
+++ b/mission2RoleRecord.css
@@ -3,7 +3,7 @@
     /* max-width: 100%; */
     max-width: 1088px;
     margin: 0 auto;
-    border: 1px solid red;
+    border: 1px solid pinks;
 background-color: yellow;
 
 
