--- a/test.css
+++ b/test.css
@@ -1,3 +1,7 @@
+* {
+    outline: 1px solid blue;
+  }
+
 .container{
     /* max-width: 100%; */
     max-width: 1088px;
@@ -62,6 +66,7 @@
     
 }
 .chatrobot-combine{
+    position: relative;
     /* max-width: 100%;
     height:524px; */
     display: flex;
@@ -76,6 +81,7 @@
     background-position: right;
 }
 .chatrobot-combine h2{
+    position: relative;
  padding-top:158px;
  padding-bottom: 8px;
  font-weight: bold;
@@ -83,8 +89,9 @@
 
 }
 .chatrobot-combine p{
-    padding-left: -10px;
-    width: 432px;
+    position: relative;
+    /* padding-left: -10px;
+    width: 432px; */
     font-size: 48px;
     padding-top: 8px;
     line-height: 60px;
@@ -622,13 +629,16 @@ padding-right: 461px; */
 }
 /***********************************************/
 @media(max-width:768px){
+   
    .toplogo-detail{
     /* background-color: aqua; */
+    
      max-width: 60%;
    }
     
    .planlogo{
-	    margin:0px;
+       position: relative;
+	    margin: 0auto;;
 	  
 }
 .chatrobot-combine{
